@@ -126,24 +126,24 @@ sub data_consumer ($$) {
 	# Try to parse the XML 3 times
 	my $xml_data;
 
-	for (1..3) {
+	for (1..2) {
 		eval {
 			threads->yield;
 			$xml_data = XMLin ($file_name, forcearray => 'module');
-	};
+	    };
 	
-	# Invalid XML
-	if ($@) {
-		sleep (10);
-		next;
-	}
+    	# Invalid XML
+    	if ($@) {
+    		sleep (2);
+    		next;
+    	}
 
-	# Ignore the timestamp in the XML and use the file timestamp instead
-	$xml_data->{'timestamp'} = strftime ("%Y-%m-%d %H:%M:%S", localtime((stat($file_name))[9])) if ($pa_config->{'use_xml_timestamp'} eq '1' || ! defined ($xml_data->{'timestamp'}));
+    	# Ignore the timestamp in the XML and use the file timestamp instead
+    	$xml_data->{'timestamp'} = strftime ("%Y-%m-%d %H:%M:%S", localtime((stat($file_name))[9])) if ($pa_config->{'use_xml_timestamp'} eq '1' || ! defined ($xml_data->{'timestamp'}));
 
-	unlink ($file_name);
-		process_xml_data ($self->getConfig (), $file_name, $xml_data, $self->getServerID (), $self->getDBH ());
-		return;	
+    	unlink ($file_name);
+    	process_xml_data ($self->getConfig (), $file_name, $xml_data, $self->getServerID (),    $self->getDBH ());
+    	return;	
 	}
 
 	rename($file_name, $file_name . '_BADXML');
